add more videos

--- a/index.html
+++ b/index.html
@@ -210,6 +210,143 @@
             </div>
           </div>
         </div>
+        <div class="video-preview">
+          <div class="thumbnail-row">
+            <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+            <div class="video-time">22:11</div>
+          </div>
+          <div class="video-info-grid">
+            <div class="channel-picture">
+              <img class="profile-picture" src="channel-pictures/channel-1.jpg">
+            </div>
+            <div class="video-info">
+              <p class="video-title">
+                Bob Gratton Ma Vie, My LIfe Saison 1 Episode 8 (QC)
+              </p>
+              <p class="video-author">
+                TVintage
+              </p>
+              <p class="video-stats">
+                106K views &#183; 1 year ago
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="video-preview">
+          <div class="thumbnail-row">
+            <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+            <div class="video-time">36.36</div>
+          </div>
+          <div class="video-info-grid">
+            <div class="channel-picture">
+              <img class="profile-picture" src="channel-pictures/channel-2.jpg">
+            </div>
+            <div class="video-info">
+              <p class="video-title">
+                Sarah literally thinks she's going home later...
+              </p>
+              <p class="video-author">
+                JCS-Criminal Psychology
+              </p>
+              <p class="video-stats">
+                16M views &#183; 4 months ago
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="video-preview">
+          <div class="thumbnail-row">
+            <img class="thumbnail" src="thumbnails/thumbnail-3.webp">
+            <div class="video-time">1:18:35</div>
+          </div>
+          <div class="video-info-grid">
+            <div class="channel-picture">
+              <img class="profile-picture" src="channel-pictures/channel-3.jpg">
+            </div>
+            <div class="video-info">
+              <p class="video-title">
+                Best Fails Of The Year - Try Not To Laugh
+              </p>
+              <p class="video-author">
+                FailArmy
+              </p>
+              <p class="video-stats">
+                105M views &#183; 1 year ago
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="video-preview">
+          <div class="thumbnail-row">
+            <img class="thumbnail" src="thumbnails/thumbnail-4.webp">
+            <div class="video-time">9:53</div>
+          </div>
+          <div class="video-info-grid">
+            <div class="channel-picture">
+              <img class="profile-picture" src="channel-pictures/channel-4.jpg">
+            </div>
+            <div class="video-info">
+              <p class="video-title">
+                When a Gang Leader Confronted Tyson
+              </p>
+              <p class="video-author">
+                BLTV Classic
+              </p>
+              <p class="video-stats">
+                60M views &#183; 1 year ago
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="video-preview">
+          <div class="thumbnail-row">
+            <img class="thumbnail" src="thumbnails/thumbnail-5.webp">
+            <div class="video-time">12:41</div>
+          </div>
+          <div class="video-info-grid">
+            <div class="channel-picture">
+              <img class="profile-picture" src="channel-pictures/channel-5.jpg">
+            </div>
+            <div class="video-info">
+              <p class="video-title">
+                Scientists Discover Planets More Habitable Than Earth
+              </p>
+              <p class="video-author">
+                Destiny
+              </p>
+              <p class="video-stats">
+                2.9M views &#183; 2 months ago
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="video-preview">
+          <div class="thumbnail-row">
+            <img class="thumbnail" src="thumbnails/thumbnail-6.webp">
+            <div class="video-time">14:47</div>
+          </div>
+          <div class="video-info-grid">
+            <div class="channel-picture">
+              <img class="profile-picture" src="channel-pictures/channel-6.jpg">
+            </div>
+            <div class="video-info">
+              <p class="video-title">
+                $1 vs $1,000,000,000 Yacht!
+              </p>
+              <p class="video-author">
+                MrBeast
+              </p>
+              <p class="video-stats">
+                182M views &#183; 1 months ago
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
